--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <sticker>
                   #use navbar.html as navbar;
                   #use footer.html as footer;
+                  #use README.md as readme;
             </sticker>
       </head>
       <body>
@@ -12,6 +13,9 @@
                   second="my projects"
                   third="contacts"
             ></navbar>
+            <div style="position: absolute; top: 10%; height: 50%; width: 80%; overflow-y: scroll; margin: 10%;">
+                  <readme></readme>
+            </div>
             <footer mail="mymail@gmail.com" gitlink="https://github.com/alle0017">
             </footer>
       </body>
