--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                   second="my projects"
                   third="contacts"
             ></navbar>
-            <div style="position: absolute; top: 10%; height: 50%; width: 80%; overflow-y: scroll; margin: 10%;">
+            <div style="position: absolute; top: 10%; height: 68%; width: 80%; overflow-y: scroll; overflow-x: hidden; padding: 2%; ">
                   <readme></readme>
             </div>
             <footer mail="mymail@gmail.com" gitlink="https://github.com/alle0017">
